--- a/style.css
+++ b/style.css
@@ -59,16 +59,16 @@ body {
 }
 
 .startingUp{
-    width: 30vw;
+    width: 40vw;
     height: 10vw;
     position: absolute;
-    margin-top: 16vw;
-    margin-left: 35vw;
+    margin-top: 14vw;
+    margin-left: 30vw;
 }
 
 .startUp_txt {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5vw;
+    font-size: 2vw;
     position: absolute;
     align-self: center;
     text-align: center;
@@ -82,28 +82,28 @@ input::-webkit-inner-spin-button {
 
 
 .input {
-    width: 10vw;
-    height: 2vw;
+    width: 13vw;
+    height: 2.5vw;
     position: absolute;
-    margin-left: 10vw;
-    margin-top: 6vw;
+    margin-left: 13.5vw;
+    margin-top: 7vw;
     font-size: 1.5vw;
     border-radius: 0.3vw;
     text-align: center;
 }
 
 .beginn{
-    width: 10vw;
-    height: 2vw;
+    width: 15vw;
+    height: 3vw;
     background-color: rgb(204, 202, 199);
     position: absolute;
-    margin-top: 9vw;
-    margin-left: 10vw;
+    margin-top: 10.5vw;
+    margin-left: 12.5vw;
     text-align: center;
-    border-radius: 1vw;
+    border-radius: 1.5vw;
     border: 0.1vw solid;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.77vw;
+    font-size: 1.2vw;
     align-content: center;
     animation: none;
 }
@@ -193,37 +193,38 @@ input::-webkit-inner-spin-button {
 
 
 .popUp{
-    width: 30vw;
-    height: 15vw;
+    width: 50vw;
+    height: 20vw;
     position: absolute;
     background-color: rgb(203, 203, 201);
     border-radius: 1vw;
     border: 0.1vw solid black;
-    margin-left: 35vw;
+    margin-left: 25vw;
     margin-top: 10vw;
     z-index: 100;
 
 }
 
 .popUp_txt{
-    width: 27vw;
-    height: 12vw;
+    width: 47vw;
+    height: 18vw;
     margin-left: 1.5vw;
     margin-top: 1.5vw;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.77vw;
+    font-size: 1.2vw;
 }
 
 .popUp_btn{
-    width: 5vw;
-    height: 1.3vw;
+    width: 8vw;
+    height: 1.5vw;
     border-radius: 0.3vw;
     border: 0.15vw solid grey;
     background-color: aliceblue;
     text-align: center;
-    margin-left: 12vw;
-    margin-top: -1vw;
+    margin-left: 20vw;
+    margin-top: -2vw;
     align-content: center;
+    font-size: 1.1vw;
 }
 
 .title_div{
@@ -290,3 +291,12 @@ input::-webkit-inner-spin-button {
 
 
 
+/*--------------------First Page-----------------------*/
+
+.mainText {
+    width: 40vw;
+    height: 20vw;
+    position: absolute;
+    margin-top: 20vw;
+    margin-left: 30vw;
+}
