--- a/style.css
+++ b/style.css
@@ -134,12 +134,13 @@ input::-webkit-inner-spin-button {
     background-color: rgb(217, 213, 207);
     position: absolute;
     margin-top: 10vw;
-    margin-left: -5vw;
+    margin-left: -6.25vw;
     text-align: center;
     border-radius: 1vw;
     border: 0.1vw solid;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.77vw;
+    font-size: 1vw;
+    
     color: black;
     text-decoration: none;
 }
@@ -179,7 +180,28 @@ input::-webkit-inner-spin-button {
     display: none;
 }
 
+.choseNumPlayers{
+    position: absolute;
+    width: 15vw;
+    height: 3vw;
+    display: none;
+    margin-left: 42.5vw;
+    margin-top: 20vw;
+}
 
+.menuNumPlayers{
+    position: absolute;
+    width: 6vw;
+    height: 1.25vw;
+    margin-left: 4.5vw;
+    margin-top: 1.5vw;
+}
+
+.NumPlayersTxt{
+    position: absolute;
+    font-size: 0.9vw;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 /*-------------------------------------------*/
 .fadeOut{
@@ -244,51 +266,50 @@ input::-webkit-inner-spin-button {
     margin-left: 5vw;
 }
 
+.avatarDiv {
+    width: 85vw;
+    height: 20vw;
+    position: absolute;
+    margin-left: 7.5vw;
+    margin-top: 20vw;
+    background-color: blue;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+}
+
 .avatar1 {
     width: 15vw;
-    height: 15vw;
+    height: 20vw;
     background-color: brown;
-    position: absolute;
-    margin-top: 17.5vw;
-    margin-left: 2.5vw;
+ 
+
 }
 
 .avatar2 {
     width: 15vw;
-    height: 15vw;
+    height: 20vw;
     background-color: brown;
-    position: absolute;
-    margin-top: 17.5vw;
-    margin-left: 22.5vw;
+
+
 }
 
 .avatar3 {
     width: 15vw;
-    height: 15vw;
+    height: 20vw;
     background-color: brown;
-    position: absolute;
-    margin-top: 17.5vw;
-    margin-left: 42.5vw;
+    
+
 }
 
 .avatar4 {
     width: 15vw;
-    height: 15vw;
+    height: 20vw;
     background-color: brown;
-    position: absolute;
-    margin-top: 17.5vw;
-    margin-left: 62.5vw;
-}
+    
 
-.avatar5 {
-    width: 15vw;
-    height: 15vw;
-    background-color: brown;
-    position: absolute;
-    margin-top: 17.5vw;
-    margin-left: 82.5vw;
 }
-
 
 
 /*--------------------First Page-----------------------*/
