--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     width: 10vw;
     height: 10vw;
     position: absolute;
-    background-image: url("ICT_LOGO_schwarz_transparent.png");
+    background-image: url("pictures/ICT_LOGO_schwarz_transparent.png");
     background-repeat: no-repeat;
     background-size: 10vw;
     margin-left: 45vw;
@@ -40,7 +40,7 @@ body {
     width: 50vw;
     height: 20vw;
     position: absolute;
-    background-image: url("ICT_web20_bg-60.png");
+    background-image: url("pictures/ICT_web20_bg-60.png");
     background-repeat: no-repeat;
     background-size: 15vw;
     margin-top: 38vw;
@@ -51,7 +51,7 @@ body {
     width: 50vw;
     height: 20vw;
     position: absolute;
-    background-image: url("ICT_web20_bg-39-1.png");
+    background-image: url("pictures/ICT_web20_bg-39-1.png");
     background-repeat: no-repeat;
     background-size: 40vw;
     margin-top: 33vw;
@@ -234,6 +234,7 @@ input::-webkit-inner-spin-button {
     margin-top: 1.5vw;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2vw;
+    position: absolute;
 }
 
 .popUp_btn{
@@ -244,9 +245,10 @@ input::-webkit-inner-spin-button {
     background-color: aliceblue;
     text-align: center;
     margin-left: 20vw;
-    margin-top: -2vw;
+    margin-top: 16vw;
     align-content: center;
     font-size: 1.1vw;
+    position: absolute;
 }
 
 .title_div{
@@ -261,56 +263,127 @@ input::-webkit-inner-spin-button {
 }
 
 .title_txt{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 2vw;
-    margin-left: 5vw;
+    margin-left: 6vw;
 }
 
 .avatarDiv {
-    width: 85vw;
-    height: 20vw;
+    width: 90vw;
+    height: 25vw;
     position: absolute;
-    margin-left: 7.5vw;
-    margin-top: 20vw;
-    background-color: blue;
+    margin-left: 5vw;
+    margin-top: 18vw;
+   
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: nowrap;
 }
 
+.inputAgentName {
+    width: 10vw;
+    height: 3vw;
+    margin-left: 4.5vw;
+    margin-top: 1vw;
+    position: absolute;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.75vw;
+}
+
 .avatar1 {
-    width: 15vw;
-    height: 20vw;
+    width: 19vw;
+    height: 25vw;
     background-color: brown;
- 
 
 }
 
 .avatar2 {
-    width: 15vw;
-    height: 20vw;
+    width: 19vw;
+    height: 25vw;
     background-color: brown;
 
 
 }
 
 .avatar3 {
-    width: 15vw;
-    height: 20vw;
+    width: 19vw;
+    height: 25vw;
     background-color: brown;
     
 
 }
 
 .avatar4 {
-    width: 15vw;
-    height: 20vw;
+    width: 19vw;
+    height: 25vw;
     background-color: brown;
     
 
 }
 
+.avatarTxt {
+    position: absolute;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 2vw;
+    margin-left: 6.5vw;
+    margin-top: 1vw;
+}
+
+.choseLook {
+    width: 15vw;
+    height: 16vw;
+    background-color: aqua;
+    margin-left: 2vw;
+    margin-top: 4.5vw;
+    position: absolute;
+    background-image: url("pictures/ICT_LOGO_schwarz_transparent.png");
+    background-repeat: no-repeat;
+    background-size: 20vw;
+}
+
+.arrow-Right {
+    width: 3vw;
+    height: 3vw;
+    margin-top: 6.5vw;
+    margin-left: 12vw;
+    position: absolute;
+    background-image: url("pictures/arrow.png");
+    background-repeat: no-repeat;
+    background-size: 2.7vw;
+    background-position: center;
+}
+
+.arrow-Left {
+    width: 3vw;
+    height: 3vw;
+    margin-top: 6.5vw;
+    position: absolute;
+    background-image: url("pictures/arrow.png");
+    background-repeat: no-repeat;
+    background-size: 2.7vw;
+    background-position: center;
+    transform: scaleX(-1);
+}
+
+.checkbox {
+    width: 2vw;
+    height: 2vw;
+    position: absolute;
+    margin-top: 21.5vw;
+    margin-left: 12vw;
+    accent-color: grey;
+}
+
+
+.label {
+    position: absolute;
+    margin-top: 21.5vw;
+    margin-left: 6vw;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.5vw;
+}
 
 /*--------------------First Page-----------------------*/
 
